Prevented some layout shift

--- a/apps/oshonz-website/src/styles/components/events.css
+++ b/apps/oshonz-website/src/styles/components/events.css
@@ -1,7 +1,7 @@
-@media screen and (max-width: 575px)
+@container md (min-width: 0)
 {
   .c-events
   {
-    flex-direction: column;
+    flex-direction: row;
   }
 }
